<resources>
    <string name="categories">Categories</string>
    <string name="closed">Closed</string>
    <string name="search_brands">Search Brands …</string>
    <string name="main_showroom">Main Showroom</string>
    <string name="search_models">Search Models …</string>
    <string name="request_appointment">Request Appointment</string>
    <string name="quick_service">QUICK SERVICE</string>
    <string name="workshop">WORKSHOP</string>
    <string name="direction">Direction</string>
    <string name="offers">Offers</string>
    <string name="starting_price">Starting Price :</string>
    <string name="offer_price">Offer Price </string>
    <string name="new_arrival">New Arrival</string>
    <string name="exterior">Exterior</string>
    <string name="interior">Interior</string>
    <string name="back">Back</string>
    <string name="click_here">Click Here</string>
    <string name="filter">Filter</string>
    <string name="filter_by_budget">Filter By Budget</string>
    <string name="type_your_budget_here">Type Your Budget Here ...</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="gallery">Gallery</string>
    <string name="no_data_found">No Data found</string>
    <string name="get_program_click_here">Get Programs</string>
    <string name="choose_your_best_deal">Choose your best deal</string>
    <string name="available_services">Available services</string>
    <string name="request_call_back">Request call back</string>
    <string name="book_now">book now</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="month_contract">months contract</string>
    <string name="day_contract">days contract</string>
    <string name="week_contract">weeks contract</string>
    <string name="year_contract">years contract</string>
    <string name="down_payment">Down Payment</string>
    <string name="down_payment_">Down Payment : </string>
    <string name="installment_period">Installment Period</string>
    <string name="financing_banks">Financing Banks</string>
    <string name="years"> Year\'s</string>
    <string-array name="year">
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>Other</item>
    </string-array>
    <string name="estimated_value_results">Estimated value results</string>
    <string name="value_of_installment">Value of installment</string>
    <string name="debit">Debit</string>
    <string name="profit">Profit</string>
    <string name="monthly_installment">Monthly Installment</string>
    <string name="installment">Installment</string>
    <string name="apply_for_finance">Apply for finance</string>
    <string name="calculate">Calculate</string>
    <string name="months">Months</string>
    <string name="kwd">KWD</string>
    <string name="my_brands">My Brands</string>
    <string name="show_more"><u>SHOW MORE</u></string>
    <string name="all_offers">All Offers</string>
    <string name="oops_slow_or_no_internet_connection_please_try_again">Oops Slow or No Internet Connection.\n Please Try again.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="offline_mode_allws_you_to_visit_all_categories_and_model_details">Offline mode allows you to visit all categories and model details.</string>
    <string name="you_can_still_try_offline_model">You can still try Offline Model.</string>
    <string name="try_again">try again</string>
    <string name="offline_mode">offline mode</string>
    <string name="oops_looks_like_we_don_t_have_any_data_related_your_search">Oops ,looks like we don\'t have any data \n related your search.</string>
    <string name="no_records_found">No Records Found!</string>
    <string name="exclusive_offers">Exclusive Offers</string>
    <string name="our_dealer">Our Dealers</string>
    <string name="trending">Trending</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="profile">Profile</string>
    <string name="finance">Finance</string>
    <string name="language">Language</string>
    <string name="aboutApp">About App</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email</string>
    <string name="email_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="forget_password"><u>Forget Password ?</u></string>
    <string name="login">login</string>
    <string name="login_to_your_account">Login To your account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="new_here">New here!</string>
    <string name="sign_up"> sign up</string>
    <string name="name">Name</string>
    <string name="register_your_new_account">Register your new account</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_e_mail_address_and_we_ll_n_send_you_a_link_to_reset_your_password">Enter your E-mail address and we\'ll \nsend you a link to reset your password.</string>
    <string name="request_reset_link">Request reset link</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_">Change password?</string>
    <string name="you_are_just_a_click_away_to_change_nyour_password">You are just a click away to change \nyour password.</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirmation_pass">Confirmation password and new password are different.</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="favorites">Favorites</string>
    <string name="call_backs">Call Backs</string>
    <string name="finance_call_backs">Finance Call Backs</string>
    <string name="finance_requests">Finance Requests</string>
    <string name="test_drives">Test Drives</string>
    <string name="payments">Payments</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dob">D.O.B</string>
    <string name="gender">Gender</string>
    <string name="civil_id_number">Civil ID Number</string>
    <string name="upload_license">Upload License</string>
    <string name="license_uploaded">License Uploaded</string>
    <string name="save_changes">Save Changes</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="empty_password">Empty Password</string>
    <string name="reset_code_sent">Reset Code sent</string>
    <string name="please_check_your_email_to_reset_nyour_password">Please check your email to reset \n your password.</string>
    <string name="done_successfully">Done Successfully</string>
    <string name="your_password_is_changed">Your password is changed.</string>
    <string name="empty_phone">Phone is empty</string>
    <string name="empty_name">Name is empty</string>
    <string name="invalid_phone">Phone number should be 8 digits and start with 5,6 or 9.</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="empty_gender">Gender is empty</string>
    <string name="empty_civil_id">Empty Civil ID</string>
    <string name="your_profile_is_update">Your profile is  updated</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="invalid_civil_id">Invalid Civil ID</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="phone_error">There is already an account with this phone.</string>
    <string name="email_error">There is already an account with this email.</string>
    <string name="email_exist_already">Email  exist already</string>
    <string name="phone_exsit">Phone number already  exist</string>
    <string name="internet_connextion_problem">internet connection problem.</string>
    <string name="search_by_brand_or_model">Search by Brand or Model.</string>
    <string name="search_here">Search Here</string>
    <string name="search">Search</string>
    <string name="log_out">Log out</string>
    <string name="please_add_your_information_to_be_contacted">Please add your information to be contacted.</string>
    <string name="update_email">Please update your email to receive confirmation </string>
    <string name="full_name">Full Name</string>
    <string name="civil_id_optional">Civil ID ( Optional )</string>
    <string name="pending">PENDING</string>
    <string name="rejected">REJECTED</string>
    <string name="approved">APPROVED</string>
    <string name="done">APPROVED</string>
    <string name="representative_contact">Thank you, Our representative will\n contact you soon.</string>
    <string name="representative_contact_delay">Thank you, Because of the current circumstances, \n our representative will contact you once we resume offices.</string>
    <string name="bank_representative_contact">Thank you, The bank representative \n will contact you soon.</string>
    <string name="bank_representative_contact_delay">hank you, Because of the current circumstances, \n the bank representative will contact you once they resume offices.</string>
    <string name="call_backs_requests">Call Back Requests</string>
    <string name="finance_callback_requests">Finance Call Back Requests</string>
    <string name="select_preferred_date_amp_time"><![CDATA[Select Preferred Date & Time]]></string>
    <string name="test_drive_at_showroom">Test drive at showroom</string>
    <string name="deliver_to_my_location">deliver to my location</string>
    <string name="model_name">Model-name</string>
    <string name="test_drive">Test-drive</string>
    <string name="choose_your_preferred_showroom">Choose your preferred showroom</string>
    <string name="confirm_test_drive">Confirm test drive</string>
    <string name="information">information</string>
    <string name="deliver_to_my_current_location">Deliver to My Current Location</string>
    <string name="address_type">Address Type</string>
    <string name="office">Office</string>
    <string name="apartment">Apartment</string>
    <string name="home">Home</string>
    <string name="area">Area</string>
    <string name="street_number_nme">Street Number / Name</string>
    <string name="block_number">Block Number</string>
    <string name="avenue">Avenue</string>
    <string name="house_building_number">House /Building Number</string>
    <string name="submit_test_drive_request">submit test drive request</string>
    <string name="pin_location">pin location</string>
    <string name="pin_my_current_location">Pin my current location</string>
    <string name="send_email">Send Email</string>
    <string name="call_us">Call Us</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="contact_name">Contact Name</string>
    <string name="do_you_have_car_you_want_to_appraise">Do you have car you want to appraise ?</string>
    <string name="hello">Hello</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="step_2_4">Step-2/4</string>
    <string name="results">Results</string>
    <string name="list_of_banks_you_are_eligible_with">List of Banks you are eligible with:</string>
    <string name="you_can_choose_test_drive_at_showroom_or_at_your_address">You can choose test drive at showroom or at your address</string>
    <string name="sorry">Sorry !</string>
</resources>