<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.kuwait.showroomz.viewModel.ContactUsVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".view.fragment.AboutAppFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="10dp"
                android:src="@mipmap/back_btn_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/cairo_semi_bold"
                android:text="@string/contact_us"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/back_btn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_container">

            <EditText
                android:id="@+id/contact_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@{viewModel.contactNameError?@color/colorPrimary:@color/colorGray}"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/contact_name"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@={viewModel.contactName}"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/contact_phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@{viewModel.phoneError?@color/colorPrimary:@color/colorGray}"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@={viewModel.phone}"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/contact_name_edit" />

            <EditText
                android:id="@+id/contact_subject_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@{viewModel.subjectError?@color/colorPrimary:@color/colorGray}"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/subject"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@={viewModel.subject}"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/contact_phone_edit" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/msg_text"
                android:background="@{viewModel.messageError?@drawable/outline_red:@drawable/outline_gray}"
                android:ems="10"
                android:fontFamily="@font/cairo_regular"
                android:gravity="start|top"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="@={viewModel.message}"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/contact_subject_edit">


            </EditText>

            <Button
                android:id="@+id/sendEmailBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/cairo_regular"
                android:onClick="@{()-> viewModel.verifyFields()}"
                android:text="@string/send_email"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/call_us_btn"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/call_us_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/call_us"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/sendEmailBtn" />
            <Button
                android:id="@+id/fb_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/msg_text"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_facebook"
                android:visibility="gone"/>

            <Button
                android:id="@+id/insta_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toStartOf="@id/fb_btn"
                app:layout_constraintTop_toBottomOf="@id/msg_text"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_instagram"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>